Remove _encrypted from file names

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,11 +69,11 @@
         {% include sidenav-link.html url="/campout-schedule-local-events" name="Campout Schedule &amp; Local Events" %}
       </ul></div></li></ul></li>
       <li class="no-padding"><ul class="collapsible collapsible-accordion"><li><a class="collapsible-header">Members<i class="material-icons drop-arrow">arrow_drop_down</i></a><div class="collapsible-body"><ul>
-        {% include sidenav-link.html url="/communication_encrypted" name="Communication" %}
-        {% include sidenav-link.html url="/calendar_encrypted" name="Calendar" %}
-        {% include sidenav-link.html url="/mb-counselors_encrypted" name="Merit Badge Counselors" %}
-        {% include sidenav-link.html url="/troop-roster_encrypted" name="Troop Roster" %}
-        {% include sidenav-link.html url="/what-can-i-do_encrypted" name="What Can I Do?" %}
+        {% include sidenav-link.html url="/communication" name="Communication" %}
+        {% include sidenav-link.html url="/calendar" name="Calendar" %}
+        {% include sidenav-link.html url="/mb-counselors" name="Merit Badge Counselors" %}
+        {% include sidenav-link.html url="/troop-roster" name="Troop Roster" %}
+        {% include sidenav-link.html url="/what-can-i-do" name="What Can I Do?" %}
       </ul></div></li></ul></li>
       {% include sidenav-link.html url="/photos" name="Photos" %}
       {% include sidenav-link.html url="/payments" name="Payments" %}
@@ -122,11 +122,11 @@
               </li>
               <li class="dropdown"><a href="javascript:void(0)" id="members">Members</a>
                 <ul>
-                  <li><a href="/communication_encrypted.html">Communication</a><li>
-                  <li><a href="/calendar_encrypted.html">Calendar</a><li>
-                  <li><a href="/mb-counselors_encrypted.html">Merit Badge Counselors</a><li>
-                  <li><a href="/troop-roster_encrypted.html">Troop Roster</a><li>
-                  <li><a href="/what-can-i-do_encrypted.html">What Can I Do?</a><li>
+                  <li><a href="/communication.html">Communication</a><li>
+                  <li><a href="/calendar.html">Calendar</a><li>
+                  <li><a href="/mb-counselors.html">Merit Badge Counselors</a><li>
+                  <li><a href="/troop-roster.html">Troop Roster</a><li>
+                  <li><a href="/what-can-i-do.html">What Can I Do?</a><li>
                 </ul>
               </li>
               <li><a href="/photos.html" id="photos">Photos</a></li>
