add .html file extension to files missing it

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,39 +49,39 @@
           </svg>
         SmugMug</a>
       </li>
-      {% include sidenav-link.html url="/index" name="Home" %}
+      {% include sidenav-link.html url="/index.html" name="Home" %}
       <li class="no-padding"><ul class="collapsible collapsible-accordion"><li><a class="collapsible-header">About<i class="material-icons drop-arrow">arrow_drop_down</i></a><div class="collapsible-body"><ul>
-        {% include sidenav-link.html url="/about" name="General Information" %}
-        {% include sidenav-link.html url="/leaders" name="Leaders" %}
-        {% include sidenav-link.html url="/eagle-scout-honor-roll" name="Eagle Scout Honor Roll" %}
+        {% include sidenav-link.html url="/about.html" name="General Information" %}
+        {% include sidenav-link.html url="/leaders.html" name="Leaders" %}
+        {% include sidenav-link.html url="/eagle-scout-honor-roll.html" name="Eagle Scout Honor Roll" %}
       </ul></div></li></ul></li>
       <li class="no-padding"><ul class="collapsible collapsible-accordion"><li><a class="collapsible-header">Information<i class="material-icons drop-arrow">arrow_drop_down</i></a><div class="collapsible-body"><ul>
-        {% include sidenav-link.html url="/forms-documents" name="Forms &amp; Documents" %}
-        {% include sidenav-link.html url="/advancement" name="Advancement" %}
-        {% include sidenav-link.html url="/participation" name="Participation" %}
-        {% include sidenav-link.html url="/leadership-training" name="Leadership Training" %}
-        {% include sidenav-link.html url="/faqs" name="Frequently Asked Questions" %}
-        {% include sidenav-link.html url="/finding-mb" name="Merit Badges" %}
-        {% include sidenav-link.html url="/helpful-links" name="Helpful Links" %}
+        {% include sidenav-link.html url="/forms-documents.html" name="Forms &amp; Documents" %}
+        {% include sidenav-link.html url="/advancement.html" name="Advancement" %}
+        {% include sidenav-link.html url="/participation.html" name="Participation" %}
+        {% include sidenav-link.html url="/leadership-training.html" name="Leadership Training" %}
+        {% include sidenav-link.html url="/faqs.html" name="Frequently Asked Questions" %}
+        {% include sidenav-link.html url="/finding-mb.html" name="Merit Badges" %}
+        {% include sidenav-link.html url="/helpful-links.html" name="Helpful Links" %}
       </ul></div></li></ul></li>
       <li class="no-padding"><ul class="collapsible collapsible-accordion"><li><a class="collapsible-header">Events<i class="material-icons drop-arrow">arrow_drop_down</i></a><div class="collapsible-body"><ul>
-        {% include sidenav-link.html url="/camps-adventure" name="Camps/High Adventure" %}
-        {% include sidenav-link.html url="/campout-schedule-local-events" name="Campout Schedule &amp; Local Events" %}
+        {% include sidenav-link.html url="/camps-adventure.html" name="Camps/High Adventure" %}
+        {% include sidenav-link.html url="/campout-schedule-local-events.html" name="Campout Schedule &amp; Local Events" %}
       </ul></div></li></ul></li>
       <li class="no-padding"><ul class="collapsible collapsible-accordion"><li><a class="collapsible-header">Members<i class="material-icons drop-arrow">arrow_drop_down</i></a><div class="collapsible-body"><ul>
-        {% include sidenav-link.html url="/communication" name="Communication" %}
-        {% include sidenav-link.html url="/calendar" name="Calendar" %}
-        {% include sidenav-link.html url="/mb-counselors" name="Merit Badge Counselors" %}
-        {% include sidenav-link.html url="/troop-roster" name="Troop Roster" %}
-        {% include sidenav-link.html url="/what-can-i-do" name="What Can I Do?" %}
+        {% include sidenav-link.html url="/communication.html" name="Communication" %}
+        {% include sidenav-link.html url="/calendar.html" name="Calendar" %}
+        {% include sidenav-link.html url="/mb-counselors.html" name="Merit Badge Counselors" %}
+        {% include sidenav-link.html url="/troop-roster.html" name="Troop Roster" %}
+        {% include sidenav-link.html url="/what-can-i-do.html" name="What Can I Do?" %}
       </ul></div></li></ul></li>
-      {% include sidenav-link.html url="/photos" name="Photos" %}
-      {% include sidenav-link.html url="/payments" name="Payments" %}
+      {% include sidenav-link.html url="/photos.html" name="Photos" %}
+      {% include sidenav-link.html url="/payments.html" name="Payments" %}
       <li><div class="divider"></div></li>
       {% include sidenav-link.html url="https://tmweb.troopmaster.com/mysite/troop370atl" name="TroopMaster" %}
       <li><div class="divider"></div></li>
-      {% include sidenav-link.html url="/contact-webmaster" name="Help &amp; Feedback" %}
-      {% include sidenav-link.html url="/cookies" name="Cookie Policy" %}
+      {% include sidenav-link.html url="/contact-webmaster.html" name="Help &amp; Feedback" %}
+      {% include sidenav-link.html url="/cookies.html" name="Cookie Policy" %}
       {% include sidenav-link.html url="https://github.com/troop-370/troop370" name="Source Code" %}
     </ul>
     <div class="flex-container topnav">
