--- a/_scss/topnav.scss
+++ b/_scss/topnav.scss
@@ -6,6 +6,7 @@
   position: sticky;
   top: 0;
   z-index: 10;
+  box-shadow: 0 2px 4px -1px rgba(0,0,0,0.1), 0 4px 5px 0 rgba(0,0,0,0.07), 0 1px 10px 0 rgba(0,0,0,0.06);
   .flex-item {
     width: $content-width;
   }
