--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
     <link rel="manifest" href="manifest.json">
     <title class="page-title">{{ page.title }} | {{ site.title }}</title>
+    <link rel="shortcut icon" type="image/x-icon" href="/src/troop370-logo/favicon.ico">
     <style>
       @media (prefers-color-scheme:dark) {
         html,body,h1,h2,h3,h4,h5,h6,p,button,a {background:black;color:black;border:black;}
