--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -188,5 +188,23 @@
         })
       }
     </script>
+    <!-- service worker -->
+    <script>
+    // Check compatibility for the browser we're running this in
+    if ("serviceWorker" in navigator) {
+      if (navigator.serviceWorker.controller) {
+        console.log("[Troop 370 Service Worker] Active service worker found; no need to register");
+      } else {
+        // Register the service worker
+        navigator.serviceWorker
+          .register("sw.js", {
+            scope: "./"
+          })
+          .then(function (reg) {
+            console.log("[Troop 370 Service Worker] Service worker has been registered for scope: " + reg.scope);
+          });
+      }
+    }
+    </script>
   </body>
 </html>
