--- a/_scss/sidenav.scss
+++ b/_scss/sidenav.scss
@@ -77,7 +77,7 @@ ul {
 
 
   .divider {
-    margin: ($sidenav-padding / 2) 0;
+    margin: ($sidenav-padding / 4) 0;
     border-bottom: 1px solid $sidenav-divider-color;
   }
 
@@ -202,6 +202,7 @@ ul {
     height: 120px;
     background-color: $sidenav-header-background-color;
     border-bottom: 1px solid $sidenav-divider-color;
+    margin-bottom: ($sidenav-padding / 4);
   }
   .bugler {
     height: 119px;
