--- a/_scss/theme.scss
+++ b/_scss/theme.scss
@@ -124,3 +124,10 @@ $tmd-table-header_row-font-weight: 500;
 $tmd-table-header_row-text-align: left;
 $tmd-table-outside_cell-padding: 16px;
 $tmd-table-border-opacity: 0.2;
+
+$event-card-width: calc(33.3% - 11px);
+$event-card-width-middle: calc(50% - 10px);
+$event-card-width-mobile: 100%;
+$event-card-margin: 0 8px 16px 0;
+$event-card-image-height: 200px;
+$event-card-content-padding: 16px;
