--- a/css/main-dark.scss
+++ b/css/main-dark.scss
@@ -7,6 +7,7 @@
 @import "@material/icon-button/mdc-icon-button";
 @import "@material/textfield/mdc-text-field";
 @import "@material/notched-outline/mdc-notched-outline";
+@import "@material/card/mdc-card";
 @import "fonts";
 @import "content-strip";
 @import "topnav";
