--- a/_layouts/encrypted.html
+++ b/_layouts/encrypted.html
@@ -17,10 +17,10 @@
     </style>
     <script>
       if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
-        document.querySelector('head').innerHTML += '<link rel="stylesheet" href="./css/main-dark.css">';
+        document.querySelector('head').innerHTML += '<link rel="stylesheet" href="/css/main-dark.css">';
         document.querySelector('head').innerHTML += '<meta name="theme-color" content="#262626">';
       } else {
-        document.querySelector('head').innerHTML += '<link rel="stylesheet" href="./css/main.css">';
+        document.querySelector('head').innerHTML += '<link rel="stylesheet" href="/css/main.css">';
         document.querySelector('head').innerHTML += '<meta name="theme-color" content="#efefef">';
       }
     </script>
