--- a/css/page/campouts.scss
+++ b/css/page/campouts.scss
@@ -32,3 +32,31 @@
     height: 64px;
   }
 }
+@media print {
+  .topnav, .content-strip.content-strip--primary.content-strip--extra-padding.content-strip--center, .mdc-icon-button {
+    display: none;
+  }
+  .content-strip {
+    padding: 0;
+    margin: 0;
+    background: #ffffff;
+  }
+  .page-content {
+    height: auto;
+  }
+  .tmd-table-wrapper {
+    border: 1px solid rgba(0,0,0,0.2);
+    margin: 0;
+  }
+  .tmd-table-wrapper .tmd-table-header {
+    color: rgba(0,0,0,0.87);
+  }
+  .tmd-table-header_row {
+    border-bottom: 1px solid rgba(0,0,0,0.1);
+    color: rgba(0,0,0,0.6);
+  }
+  .tmd-table-row {
+    border-bottom: 1px solid rgba(0,0,0,0.1);
+    color: rgba(0,0,0,0.87);
+  }
+}
