--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,10 +67,7 @@
         {% include sidenav-link.html url="/finding-mb.html" name="Merit Badges" %}
         {% include sidenav-link.html url="/helpful-links.html" name="Helpful Links" %}
       </ul></div></li></ul></li>
-      <li class="no-padding"><ul class="collapsible collapsible-accordion"><li><a class="collapsible-header">Events<i class="material-icons drop-arrow">arrow_drop_down</i></a><div class="collapsible-body"><ul>
-        {% include sidenav-link.html url="/camps-adventure.html" name="Camps/High Adventure" %}
-        {% include sidenav-link.html url="/campout-schedule-local-events.html" name="Campout Schedule &amp; Local Events" %}
-      </ul></div></li></ul></li>
+      {% include sidenav-link.html url="/events.html" name="Events" %}
       <li class="no-padding"><ul class="collapsible collapsible-accordion"><li><a class="collapsible-header">Members<i class="material-icons drop-arrow">arrow_drop_down</i></a><div class="collapsible-body"><ul>
         {% include sidenav-link.html url="/communication.html" name="Communication" %}
         {% include sidenav-link.html url="/calendar.html" name="Calendar" %}
@@ -117,12 +114,7 @@
                   <li><a href="/helpful-links.html">Helpful Links</a></li>
                 </ul>
               </li>
-              <li class="dropdown"><a href="javascript:void(0)" id="tevents">Events</a>
-                <ul>
-                  <li><a href="/camps-adventure.html">Camps/High Adventure</a><li>
-                  <li><a href="/campout-schedule-local-events.html">Campout Schedule &amp; Local Events</a><li>
-                </ul>
-              </li>
+              <li><a href="/events.html" id="tevents">Events</a></li>
               <li class="dropdown"><a href="javascript:void(0)" id="members">Members</a>
                 <ul>
                   <li><a href="/communication.html">Communication</a><li>
