add placeholder url for Install link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
           </svg>
         SmugMug</a>
       </li>
-      {% include sidenav-link.html onclick="install()" id="sideNavAppInstall" href="#" name="Install Troop 370 App" %}
+      {% include sidenav-link.html onclick="install()" id="sideNavAppInstall" url="#" name="Install Troop 370 App" %}
       <li><div class="divider" id="sideNavAppInstallDivider"></div></li>
       {% include sidenav-link.html url="/index.html" name="Home" %}
       <li class="no-padding"><ul class="collapsible collapsible-accordion"><li><a class="collapsible-header">About<i class="material-icons drop-arrow">arrow_drop_down</i></a><div class="collapsible-body"><ul>
