add store page and associated topnav and sidenav links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,6 +80,7 @@
       </ul></div></li></ul></li>
       {% include sidenav-link.html url="/photos.html" name="Photos" %}
       {% include sidenav-link.html url="/payments.html" name="Payments" %}
+      {% include sidenav-link.html url="/store.html" name="Store" %}
       <li><div class="divider"></div></li>
       {% include sidenav-link.html url="https://tmweb.troopmaster.com/mysite/troop370atl" name="TroopMaster" %}
       <li><div class="divider"></div></li>
@@ -135,6 +136,7 @@
               <li><a href="/photos.html" id="photos">Photos</a></li>
               <li><a href="/contact.html" id="contact">Contact</a></li>
               <li><a href="/payments.html" id="payments">Pay<spam class="hide-small">ments</span></a></li>
+              <li><a href="/store.html" id="store">Store</a></li>
             </ul>
           </div>
         </div>
