--- a/_scss/topnav.scss
+++ b/_scss/topnav.scss
@@ -148,3 +148,14 @@
     display: inline-block;
   }
 }
+#storeTabBar {
+  position: sticky;
+  top: 0;
+  background: $content-strip-primary-background;
+  z-index: 9;
+  box-shadow: 0 2px 4px -1px rgba(0,0,0,0.1), 0 4px 5px 0 rgba(0,0,0,0.07), 0 1px 10px 0 rgba(0,0,0,0.06);
+  @media (max-width: $breakpoint-mobile) {
+    background: $topnav-background;
+    z-index: 11;
+  }
+}
