--- a/css/main.scss
+++ b/css/main.scss
@@ -7,6 +7,10 @@
 @import "@material/icon-button/mdc-icon-button";
 @import "@material/textfield/mdc-text-field";
 @import "@material/notched-outline/mdc-notched-outline";
+@import "@material/tab-bar/mdc-tab-bar";
+@import "@material/tab-scroller/mdc-tab-scroller";
+@import "@material/tab-indicator/mdc-tab-indicator";
+@import "@material/tab/mdc-tab";
 @import "fonts";
 @import "content-strip";
 @import "topnav";
@@ -17,3 +21,4 @@
 @import "index";
 @import "flickity";
 @import "staticrypt";
+@import "ecwid";
