--- a/_scss/sitewide.scss
+++ b/_scss/sitewide.scss
@@ -1,14 +1,12 @@
-html, body, h1, h2, h3, h4, h5, h6, p, button, a {
+html, body, h1, h2, h3, h4, h5, h6, p, button, a, ul, ol {
   background: unset;
   color: unset;
   border: unset;
+  @include mdc-typography(body1);
 }
 html, body, h1, h2, h3, h4, h5, h6, p {
   padding: 0;
   margin: 0;
-}
-p, ul, ol {
-  @include mdc-typography(body1);
 }
 @media (max-width: $breakpoint-mobile) {
   input, textarea, button, select, a {
