replace `.event-card` `onClick` with `<a>` around `.event-card`

--- a/_scss/content-strip.scss
+++ b/_scss/content-strip.scss
@@ -169,6 +169,10 @@
       &-content {
         padding: $event-card-content-padding;
       }
+      &-a {
+        text-decoration: none;
+        display: contents;
+      }
     }
   }
 }
