--- a/_includes/event-card.html
+++ b/_includes/event-card.html
@@ -1,7 +1,9 @@
-<div class="mdc-card event-card mdc-ripple-surface" onclick="location.href='{{ include.card-href }}'">
-  <div class="event-card-image" style="background-image:url('{{ include.background-image }}')"></div>
-  <div class="event-card-content">
-    <h2>{{ include.card-title }}</h2>
-    <p>{{ include.card-subtitle }}</p>
+<a href="{{ include.card-href }}" class="event-card-a">
+  <div class="mdc-card event-card mdc-ripple-surface">
+    <div class="event-card-image" style="background-image:url('{{ include.background-image }}')"></div>
+    <div class="event-card-content">
+      <h2>{{ include.card-title }}</h2>
+      <p>{{ include.card-subtitle }}</p>
+    </div>
   </div>
-</div>
+</a>
