--- a/_scss/content-strip.scss
+++ b/_scss/content-strip.scss
@@ -37,8 +37,10 @@
       display: block;
     }
   }
-  a:not(.mdc-button) {
-    color: inherit;
+  a:not(.mdc-button):not(.event-card-a) {
+    text-decoration: underline;
+    text-decoration-color: $mdc-theme-primary;
+    color: $mdc-theme-primary;
     &:hover {
       background-color: #80808033;
     }
@@ -172,6 +174,7 @@
       &-a {
         text-decoration: none;
         display: contents;
+        color: inherit;
       }
     }
   }
