--- a/_scss/ecwid.scss
+++ b/_scss/ecwid.scss
@@ -2,6 +2,9 @@ html#ecwid_html {
   body#ecwid_body {
     div.ec-size {
       .ec-store {
+        a {
+          text-decoration: underline;
+        }
         .form-control__button {
 
         }
