revert link color to color of other text (inherit)

--- a/_scss/content-strip.scss
+++ b/_scss/content-strip.scss
@@ -39,8 +39,8 @@
   }
   a:not(.mdc-button):not(.event-card-a) {
     text-decoration: underline;
-    text-decoration-color: $mdc-theme-primary;
-    color: $mdc-theme-primary;
+    text-decoration-color: inherit;
+    color: inherit;
     &:hover {
       background-color: #80808033;
     }
