--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -97,38 +97,14 @@
           <div class="grid-item-navigation">
             <ul id="main-nav">
               <li><a href="/index.html" id="home">Home</a></li>
-              <li class="dropdown"><a href="javascript:void(0)" id="about">About</a>
-                <ul>
-                  <li><a href="/about.html">General Information</a></li>
-                  <li><a href="/leaders.html">Leaders</a></li>
-                  <li><a href="/eagle-scout-honor-roll.html">Eagle Scout Honor Roll</a></li>
-                </ul>
-              </li>
-              <li class="dropdown"><a href="javascript:void(0)" id="info">Info<spam class="hide-small">rmation</span></a>
-                <ul>
-                  <li><a href="/forms-documents.html">Forms &amp; Documents</a></li>
-                  <li><a href="/advancement.html">Advancement</a></li>
-                  <li><a href="/participation.html">Participation</a></li>
-                  <li><a href="/leadership-training.html">Leadership Training</a></li>
-                  <li><a href="/faqs.html">Frequently Asked Questions</a></li>
-                  <li><a href="/finding-mb.html">Merit Badges</a></li>
-                  <li><a href="/helpful-links.html">Helpful Links</a></li>
-                </ul>
-              </li>
-              <li><a href="/events.html" id="tevents">Events</a></li>
-              <li class="dropdown"><a href="javascript:void(0)" id="members">Members</a>
-                <ul>
-                  <li><a href="/communication.html">Communication</a><li>
-                  <li><a href="/calendar.html">Calendar</a><li>
-                  <li><a href="/mb-counselors.html">Merit Badge Counselors</a><li>
-                  <li><a href="/troop-roster.html">Troop Roster</a><li>
-                  <li><a href="/what-can-i-do.html">What Can I Do?</a><li>
-                </ul>
-              </li>
-              <li><a href="/photos.html" id="photos">Photos</a></li>
-              <li><a href="/contact.html" id="contact">Contact</a></li>
-              <li><a href="/payments.html" id="payments">Pay<spam class="hide-small">ments</span></a></li>
-              <li><a href="/store.html" id="store">Store</a></li>
+              {% include topnav-item.html collection="about" collection-label="About" %}
+              {% include topnav-item.html collection="information" collection-label="Info" collection-label-hide-small="rmation" %}
+              {% include topnav-item.html collection="events" collection-label="Events" %}
+              {% include topnav-item.html collection="members" collection-label="Members" %}
+              {% include topnav-item.html collection="photos" collection-label="Photos" %}
+              {% include topnav-item.html collection="contact" collection-label="Contact" %}
+              {% include topnav-item.html collection="payments" collection-label="Pay" collection-label-hide-small="ments" %}
+              {% include topnav-item.html collection="store" collection-label="Store" %}
             </ul>
           </div>
         </div>
