--- a/_scss/sidenav.scss
+++ b/_scss/sidenav.scss
@@ -10,7 +10,7 @@ ul {
   margin: 0;
   transform: translateX(-100%);
   height: 100%;
-  height: calc(100% + 60px);
+  //height: calc(100% + 60px);
   height: -moz-calc(100%); //Temporary Firefox Fix
   padding-bottom: 60px;
   background-color: $sidenav-bg-color;
