move cookies.html to information category

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,7 +65,7 @@
       {% include sidenav-link.html url="https://tmweb.troopmaster.com/mysite/troop370atl" name="TroopMaster" %}
       <li><div class="divider"></div></li>
       {% include sidenav-link.html url="/contact-webmaster.html" name="Help &amp; Feedback" %}
-      {% include sidenav-link.html url="/cookies.html" name="Cookie Policy" %}
+      {% include sidenav-link.html url="/information/cookies.html" name="Cookie Policy" %}
       {% include sidenav-link.html url="https://github.com/troop-370/troop370" name="Source Code" %}
     </ul>
     <div class="flex-container topnav">
