do not shrink category names in sidenav

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,12 +54,12 @@
       <li><div class="divider" id="sideNavAppInstallDivider"></div></li>
       {% include sidenav-link.html url="/index.html" name="Home" %}
       {% include sidenav-item.html collection="about" collection-label="About" %}
-      {% include sidenav-item.html collection="information" collection-label="Info" collection-label-hide-small="rmation" %}
+      {% include sidenav-item.html collection="information" collection-label="Information" %}
       {% include sidenav-item.html collection="events" collection-label="Events" %}
       {% include sidenav-item.html collection="members" collection-label="Members" %}
       {% include sidenav-item.html collection="photos" collection-label="Photos" %}
       {% include sidenav-item.html collection="contact" collection-label="Contact" %}
-      {% include sidenav-item.html collection="payments" collection-label="Pay" collection-label-hide-small="ments" %}
+      {% include sidenav-item.html collection="payments" collection-label="Payments" %}
       {% include sidenav-item.html collection="store" collection-label="Store" %}
       <li><div class="divider"></div></li>
       {% include sidenav-link.html url="https://tmweb.troopmaster.com/mysite/troop370atl" name="TroopMaster" %}
