--- a/_scss/sitewide.scss
+++ b/_scss/sitewide.scss
@@ -6,6 +6,9 @@ html, body, h1, h2, h3, h4, h5, h6, p, a, button, ul, ol {
     @include mdc-typography(body1);
   }
 }
+html {
+  background-color: $mdc-theme-background;
+}
 html, body, h1, h2, h3, h4, h5, h6, p {
   padding: 0;
   margin: 0;
@@ -27,8 +30,8 @@ canvas#topbar {
     margin-top: 53px;
 }
 .page-content {
-  height: calc(100vh - 56px);
-  overflow: auto;
+  /*height: calc(100vh - 56px);
+  overflow: auto;*/
   background: $mdc-theme-background;
 }
 .mdc-button {
