--- a/css/main.scss
+++ b/css/main.scss
@@ -6,6 +6,12 @@
 @import "@material/button/mdc-button";
 @import "@material/icon-button/mdc-icon-button";
 @import "@material/textfield/mdc-text-field";
+@import "@material/form-field/mdc-form-field";
+@import "@material/checkbox/mdc-checkbox";
+@import "@material/select/mdc-select";
+@import "@material/list/mdc-list";
+@import "@material/menu-surface/mdc-menu-surface";
+@import "@material/menu/mdc-menu";
 @import "@material/notched-outline/mdc-notched-outline";
 @import "@material/card/mdc-card";
 @import "@material/tab-bar/mdc-tab-bar";
